--- a/main.css
+++ b/main.css
@@ -32,3 +32,26 @@
     padding-right: 200px;
 
 }
+.main1 {
+    width:100%;
+    height:2000px;
+    float: left;
+    background: coral; 
+}
+.left1 {
+    width:200px;
+    height:2000px;
+    float:left;
+    background: lightpink;
+    margin-left:-200px;
+}
+.right1 {
+    width:200px;
+    height:2000px;
+    float:left;
+    background: lightpink;
+    margin-left:-100%;
+}
+.inner {
+    margin: 200px;
+}
